Change license to MPL-2.0
Add Russian translation (kyrtion)